servers added to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ Project2/target/classes/com/revature/utility/META-INF/MANIFEST.MF
 Project2/target/classes/com/revature/utility/META-INF/maven/com.revature/Project2/pom.properties
 Project2/target/classes/com/revature/utility/META-INF/maven/com.revature/Project2/pom.xml
 Project2/target/m2e-wtp/web-resources/META-INF/maven/com.revature/Project2/pom.properties
+Servers/.project
+Servers/.settings/org.eclipse.wst.server.core.prefs
+Servers/Tomcat v8.5 Server at localhost-config/catalina.policy
+Servers/Tomcat v8.5 Server at localhost-config/catalina.properties
+Servers/Tomcat v8.5 Server at localhost-config/context.xml
+Servers/Tomcat v8.5 Server at localhost-config/server.xml
+Servers/Tomcat v8.5 Server at localhost-config/tomcat-users.xml
+Servers/Tomcat v8.5 Server at localhost-config/web.xml
